# Diploma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Diploma/: CMakeLists.txt  Diploma.cpp  Diploma.h  Plot.cpp  Plot.h
Diploma/algorithm/: Algorithm.cpp  Algorithm.h  DSAlgorithm.cpp  DSAlgorithm.h  DifferenceMethod.cpp  DifferenceMethod.h  EAlgorithm.cpp  EAlgorithm.h  Exceptions.cpp  Exceptions.h  ExplicitDifferenceMethod.cpp  ExplicitDifferenceMethod.h  ExplicitMethodUniformConcentration.cpp  Formulas.cpp  Formulas.h  ImplicitDifferenceMethod.cpp  ImplicitDifferenceMethod.h  ImplicitMethodUniformConcentration.cpp  Integrals.cpp  Integrals.h  MathUtils.cpp  RightSweep.cpp  RightSweep.h  Utils.cpp  Utils.h
Diploma/algorithm/angles/: EAlgorithm.cpp  EAlgorithm.h  Formulas.cpp  Formulas.h  Integrals.cpp  Integrals.h
Diploma/algorithm/difference_scheme/: DSAlgorithm.cpp  DSAlgorithm.h  Formulas.cpp  Formulas.h  Integrals.cpp  Integrals.h
Diploma/plot/: Exceptions.cpp  Exceptions.h  Plot.cpp  Plot.h  Utils.cpp  Utils.h
Diploma/utils/: Exceptions.cpp  Exceptions.h  Utils.cpp  Utils.h
libs/GNUPlotWrapper/: CMakeLists.txt
res/: algorithm_config_full.json  algorithm_config_simple.json  config.json  diploma_90_grad.json  diploma_90_grad_uniform.json  diploma_a1_down.json  diploma_a1_down_small.json  diploma_a2_up.json  diploma_a2_up_small.json  diploma_comparison_uniform_non_uniform.json  diploma_full.json  diploma_simple.json  plot_config.json
src/: ConfigFileReader.h  ConfigJsonFileReader.cpp  ConfigJsonFileReader.h  Configurator.cpp  Configurator.h  Diploma.cpp  DiplomaPlotHelper.cpp  DiplomaPlotHelper.h  Exceptions.cpp  Exceptions.h  Utils.cpp  Utils.h
tex/: .gitignore  Diploma.tex
word/: Annotation.docx  Diploma.docx  Extra.docx  extra.cpp
